--- a/azure-devops-git-extension/package.json
+++ b/azure-devops-git-extension/package.json
@@ -5,12 +5,16 @@
   "dependencies": {
     "@azure/msal-browser": "^4.13.0",
     "@azure/msal-react": "^3.0.12",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1"
+    "react-router-dom": "^7.6.2",
+    "react-scripts": "^0.0.0"
   },
   "scripts": {
     "start": "nx serve",
