--- a/azure-devops-git-extension/package.json
+++ b/azure-devops-git-extension/package.json
@@ -14,7 +14,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
-    "react-scripts": "^0.0.0"
+    "react-scripts": "^0.0.0",
+    "rxjs": "^7.8.2"
   },
   "scripts": {
     "start": "nx serve",
