--- a/azure-devops-git-extension/package.json
+++ b/azure-devops-git-extension/package.json
@@ -46,8 +46,14 @@
     "@nx/web": "21.1.3",
     "@rollup/plugin-replace": "^6.0.2",
     "@testing-library/jest-dom": "^6.6.3",
+    "@types/node": "^20.10.5",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.0",
+    "@typescript-eslint/eslint-plugin": "^7.3.0",
+    "@typescript-eslint/parser": "^7.3.0",
     "@vitejs/plugin-react": "^4.5.1",
     "@vitest/ui": "^3.0.0",
+    "typescript": "^5.4.3",
     "eslint-config-react-app": "^7.0.1",
     "jest-watch-typeahead": "^2.2.2",
     "jiti": "2.4.2",
