--- a/azure-devops-git-extension/package.json
+++ b/azure-devops-git-extension/package.json
@@ -7,6 +7,7 @@
     "@azure/msal-react": "^3.0.12",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.3.0",
@@ -53,11 +54,11 @@
     "@typescript-eslint/parser": "^7.3.0",
     "@vitejs/plugin-react": "^4.5.1",
     "@vitest/ui": "^3.0.0",
-    "typescript": "^5.4.3",
     "eslint-config-react-app": "^7.0.1",
     "jest-watch-typeahead": "^2.2.2",
     "jiti": "2.4.2",
     "nx": "21.1.3",
+    "typescript": "^5.4.3",
     "vite": "^6.3.5",
     "vitest": "^3.2.2",
     "web-vitals": "^5.0.2"
